# tauri-sqlite

./: README.md  index.html  package.json  tsconfig.json  vite.config.ts
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  main.rs  state.rs
